--- a/app/src/main/res/layout/activity_currency_list.xml
+++ b/app/src/main/res/layout/activity_currency_list.xml
@@ -14,9 +14,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/activity_currency_list"/>
+        app:theme="@style/AppTheme.Toolbar"
+        app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,10 +26,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"/>
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>
 
    <android.support.v7.widget.RecyclerView
-       android:visibility="gone"
        android:id="@+id/recyclerViewCurrencies"
        android:layout_width="0dp"
        android:layout_height="0dp"
