--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#B4B4B4</color>
     <color name="colorBlack">#000000</color>
 </resources>
