--- a/app/src/main/res/layout/activity_currency_list.xml
+++ b/app/src/main/res/layout/activity_currency_list.xml
@@ -28,6 +28,19 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>
 
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/textViewError"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_horizontal"
+        android:layout_marginEnd="@dimen/margin_horizontal"
+        android:text="@string/connection_failed_error"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewCurrencies"
        android:layout_width="0dp"
